# indexer

./: Cargo.toml  README.md  build-wasm.sh  build.rs  config.json  run.sh  test.sh
.github/workflows/: ci.yml
benches/: indexer_benchmarks.rs
migrations/2023-09-04-000000_initial_schema/: down.sql  up.sql
src/: cli.rs  config.rs  lib.rs  main.rs  schema.rs
src/api/: graphql.rs  mod.rs  rest.rs
src/db/: mod.rs  operations.rs
src/indexer/: processor.rs
src/ingestion/: geyser_plugin.rs  mod.rs  rpc_poller.rs  websocket_listener.rs
src/models/: account.rs  transaction.rs
src/processing/: account_parser.rs  event_parser.rs  instruction_parser.rs  mod.rs  state_manager.rs
src/storage/: bigtable.rs  clickhouse.rs  ipfs.rs  mod.rs  redis.rs  scylla.rs
src/utils/: mod.rs  solana_utils.rs
src/wasm/: error.rs  mod.rs  runtime.rs  types.rs
tests/: integration_tests.rs
