[package]
name = "cypher-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.0.8"
solana-client = "2.0.8"
solana-transaction-status = "2.0.8"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11.5"
futures = "0.3"

[build-dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"