[package]
name = "cypher_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-sdk = "2.0.8"
solana-client = "2.0.8"
solana-transaction-status = "2.0.8"
solana-account-decoder = "2.0.8"
clickhouse = "0.12.2"
scylla = "0.14.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
async-graphql = { version = "7.0.9", features = ["chrono", "url"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipfs-api-backend-hyper = "0.6"
wasmer = "4.3.6"
wasmer-wasi = "3.1.1"
wasm-bindgen = "0.2.93"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
borsh = "1.5.1"
rayon = "1.7"
dashmap = "6.1.0"
bincode = "1.3"
bs58 = "0.5.1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.13.0"
proptest = "1.1"

[lib]
name = "cypher_indexer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cypher_indexer"
path = "src/main.rs"

[[bench]]
name = "indexer_benchmarks"
harness = false
